fix: blog section mobile view, add: fade-in animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,16 @@ nav ul {
 .cursor-blink {
   animation: cursor-blink 1s step-start infinite;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-in-out;
+}
